Fixed comments cut off, link info card, submit buttons

--- a/reddit.css
+++ b/reddit.css
@@ -254,7 +254,7 @@ a.subbarlink {
   margin-top: 10px
 }
 
-.sitetable:nth-of-type(1) {
+#siteTable {
   list-style-type: none;
   width: calc(97% - 300px);
   margin: 15px;
@@ -405,20 +405,21 @@ div.side div.spacer:nth-of-type(1) {
   padding-top: 415px;
 }
 
-.side .spacer:nth-of-type(2) {
-  margin: 5px;
-}
-
-.side .spacer:nth-of-type(3) {
-  margin: 0;
-}
-
-.side .spacer:nth-of-type(4) {
+.titlebox {
   background: white;
   padding: 10px;
   border-radius: 8px;
   margin-top: 15px;
   box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
+}
+
+.linkinfo {
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 15px;
+  box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
+  background: white;
+  border: none;
 }
 
 
@@ -767,7 +768,7 @@ div.side div.spacer:nth-of-type(1):before {
 }
 
 .sidebox.submit.submit-text {
-  margin-top: -42px;
+  margin-top: -49px;
   margin-left: 153px;
 }
 
